# rugby-xpoints

./: .buildinfo  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js
.github/workflows/: docs.yml  release.yml  tests.yml
_sources/: index.rst.txt
code/: calcul_proba.py  repertoireV3.py  stats_joueurs.py
data/: db_init.sql  repertoire.csv
data/TOP 14/: coups_joueurs_TOP 14_6.csv  coups_joueurs_TOP 14_7.csv  coups_joueurs_TOP 14_None.csv  stats_joueurs_TOP 14.csv  stats_joueurs_TOP 14_6.csv  stats_joueurs_TOP 14_7.csv
docs/source/: conf.py
docs/tutorials/: tutorial.md
rugby_xpoints/: calcul_proba.py  repertoireV3.py  stats_joueurs.py
tests/: test_calculs.py
