[tool.poetry]
name = "rugby-xpoints"
version = "0.1.0"
description = "Analyse des buteurs de rugby (pénalités et transformations) via la métrique xPoints (expected points)."
authors = ["Marius Pascal <marius.pascal2b@gmail.com>"]
readme = "README.md"
packages = [{ include = "rugby_xpoints" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.3.3,<3.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
matplotlib = ">=3.10.7,<4.0.0"
numpy = "<2"

[tool.poetry.scripts]
calcul_proba = "code.calcul_proba:main"
repertoire = "code.repertoireV3:main"
stats_joueurs = "code.stats_joueurs:main"

[tool.poetry.urls]
repository = "https://github.com/mariuspascal1/rugby-xpoints"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "sphinx (>=9.0.4,<10.0.0)"
]
